@@ -19,6 +19,7 @@
   * [Remove-MsmqMessageQueue](http://get-carbon.org/help/Remove-MsmqMessageQueue.html)
   * [Test-MsmqMessageQueue](http://get-carbon.org/help/Test-MsmqMessageQueue.html)
   * [Get-PerformanceCounters](http://get-carbon.org/help/Get-PerformanceCounters.html)
+  * [Install-PerformanceCounter](http://get-carbon.org/help/Install-PerformanceCounter.html)
 * Improved whitespace in HTML documentation code samples.
 
 
